src/pages/single-project/single-project.css
.single-traveler{
    background-image: url("../../../public/assets/traveler-bg.jpg");
}

.single-recettes{
    background-image: url("../../../public/assets/recettes-bg.jpg");
}

.single-furnitura{
    background-image: url("../../../public/assets/furnitura-bg.jpg");
}

.single-timdesign{
    background-image: url("../../../public/assets/timdesign-bg.jpg");
}

.single-project h1{
    padding-top: 140px;
    font-size: 140px;
    line-height: 100%;
    margin: 20px 0;
}

.single-project p{
    color: #fff;
}

.single-project li{
    color: #fff;
}

.single-project-infos{
    display: flex;
    align-items: center;
    padding-bottom: 90px;
}

.single-project-content{
    padding-right: 20px;
}

.single-project-content nav ul{
    display: flex;
    list-style: none;
    padding: 0 0 25px 0;
    margin: 0;
}

.single-project-content nav ul li{
    margin-right: 18px;
    font-weight: 800;
}

.single-project-btn-ctn{
    padding-top: 25px;
}

.single-project-btn-ctn a{
    background-color: #D35F74;
    margin-right: 30px;
    padding: 10px 15px;
    border-radius: 1px;
}

.single-project-btn-ctn a:hover{
    background-color: #dc7f90;
}

.single-project-media{
    width: 60%;
    height: 50%;
}

.single-project-media video{
    width: 60vw;
    object-fit: cover;
}

@media (max-width: 1279px){
    .single-project h1{
        font-size: 110px;
    }
}

@media (max-width: 1023px){
    .single-project h1{
        font-size: 70px;
    }

    .single-project-infos{
        flex-direction: column;
    }

    .single-project-media{
        width: 100%;
        height: 50%;
    }
    
    .single-project-media video{
        width: 100%;
        object-fit: cover;
    }

    .single-project-btn-ctn{
        padding-bottom: 40px;
    }

    .single-project-content{
        padding-right: 0;
    }
}

@media (max-width: 650px){
    .single-recettes h1{
        width: 370px;
    }
}

@media (max-width: 450px){
    .single-project h1{
        font-size: 60px;
    }

    .single-project-infos{
        padding-bottom: 50px;
    }
}

